<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Home</string>
    <string name="foo_label">\@foo</string>
    <string name="body_label">This is the tweet body</string>
    <string name="tvTime_label">Time</string>
    <string name="title_activity_compose"></string>
    <string name="action_tweet">Tweet</string>
    <string name="tweet_btn">Tweet</string>
    <string name="tvlabel_screenName">\@screenname</string>
    <string name="tvmyname_label">myname</string>
    <string name="tvscreenName_label">ScreenName</string>
    <string name="iv_contentDisccription">Profile Image of the user</string>
    <string name="et_hint_tweet">"What's Happenning "</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_user_icon_click_profile">UserIconClickProfileActivity</string>

</resources>