<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/iv_contentDisccription"
        android:paddingTop="10dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/foo_label"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
  		/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/tvTime_label"
        android:textColor="#808080"
        android:textSize="12sp"
        android:paddingTop="10dp"
  	 	/>

    <TextView
        android:id="@+id/tvTimeScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvUserName"
        android:paddingTop="10dp"
        android:text="@string/tvlabel_screenName"
        android:textColor="#D3D3D3"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_below="@+id/tvUserName"
        android:text="@string/body_label"
        android:autoLink="all"
        android:linksClickable="true"
        android:textSize="12sp"
        android:paddingTop="8dp"
  		 />

</RelativeLayout>
