<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ComposeActivity" >

    <ImageView
        android:id="@+id/ivMyProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/iv_contentDisccription" />

    <TextView
        android:id="@+id/tvMyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivMyProfileImage"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/ivMyProfileImage"
        android:text="@string/tvmyname_label" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMyName"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/ivMyProfileImage"
        android:text="@string/tvscreenName_label" />

    <EditText
        android:id="@+id/et_tweetText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ivMyProfileImage"
        android:autoLink="all"
        android:hint="@string/et_hint_tweet"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:minLines="5"
        android:linksClickable="true" >

        <requestFocus />
    </EditText>

</RelativeLayout>
